15-network-policy/network-policies/bloqueia-tudo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: bloqueia-tudo-ingress
  namespace: giropops
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
