15-network-policy/network-policies/permitir-redis-somente-mesmo-ns copy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: permitir-redis-somente-mesmo-ns
  namespace: giropops
spec:
  podSelector:
    matchLabels:
      app: redis
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector: {}
